--- a/.github/workflows/autosync_routing.yml
+++ b/.github/workflows/autosync_routing.yml
@@ -66,7 +66,7 @@ jobs:
       run: |
         git clone $REPO_URL -b $REPO_BRANCH packages
         cd packages
-        rm -rf *.md && rm -rf LICENSE
+        rm -rf *.md && rm -rf LICENSE rm -rf README MAINTAINERS
       
     # 上传到分支
     - name: 上传到分支
@@ -74,6 +74,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
       run: |
           cd packages/
+          git config core.ignorecase false
           git init
           git config user.name $GITHUB_USER_NAME
           git config user.email $GITHUB_USER_EMAIL
