--- a/.github/workflows/autosync_luci.yml
+++ b/.github/workflows/autosync_luci.yml
@@ -78,5 +78,5 @@ jobs:
           git config user.name $GITHUB_USER_NAME
           git config user.email $GITHUB_USER_EMAIL
           git add .
-          git commit -a -m "Update packages"
+          git commit -a -m "Update luci"
           git push --force --quiet https://${{ secrets.RELEASE_TOKEN }}@$GITHUB_RROJECT HEAD:$BRANCH
