--- a/.github/workflows/autosync_uola.yml
+++ b/.github/workflows/autosync_uola.yml
@@ -67,7 +67,7 @@ jobs:
         svn co https://github.com/danxiaonuo/AutoBuild-OpenWrt/trunk/server/default-settings default-settings
         #git clone $REPO_URL -b $REPO_BRANCH packages
         #cd packages
-        #rm -rf *.md && rm -rf LICENSE rm -rf README MAINTAINERS
+        rm -rf .svn && rm -rf .git && rm -rf *.md && rm -rf LICENSE rm -rf README MAINTAINERS
       
     # 上传到分支
     - name: 上传到分支
