--- a/.github/workflows/autosync_uola.yml
+++ b/.github/workflows/autosync_uola.yml
@@ -67,6 +67,7 @@ jobs:
         svn co https://github.com/danxiaonuo/AutoBuild-OpenWrt/trunk/server/default-settings default-settings
         #git clone $REPO_URL -b $REPO_BRANCH packages
         #cd packages
+        cd default-settings
         rm -rf .svn && rm -rf *.md && rm -rf LICENSE rm -rf README MAINTAINERS LICENSE
       
     # 上传到分支
