--- a/.github/workflows/autosync_uola.yml
+++ b/.github/workflows/autosync_uola.yml
@@ -70,6 +70,13 @@ jobs:
         cd uola
         rm -rf .svn && rm -rf *.md && rm -rf LICENSE rm -rf README MAINTAINERS LICENSE
       
+    # 加载自定义脚本  
+    - name: 加载自定义脚本
+      run: |
+        chmod +x $DIY_SH
+        cd uola
+        ../$DIY_SH
+        
     # 上传到分支
     - name: 上传到分支
       env:
