--- a/.github/workflows/autosync_routing.yml
+++ b/.github/workflows/autosync_routing.yml
@@ -67,6 +67,8 @@ jobs:
         git clone $REPO_URL -b $REPO_BRANCH routing
         cd routing
         rm -rf .svn && rm -rf *.md && rm -rf LICENSE rm -rf README MAINTAINERS LICENSE
+        find /home/runner/work/AutoSync/AutoSync/routing/. -type d -iname '.svn' | xargs rm -rf
+        find /home/runner/work/AutoSync/AutoSync/routing/. -type d -iname '.git' | xargs rm -rf
       
     # 上传到分支
     - name: 上传到分支
