--- a/.github/workflows/autosync_packages.yml
+++ b/.github/workflows/autosync_packages.yml
@@ -67,17 +67,17 @@ jobs:
         git clone $REPO_URL -b $REPO_BRANCH packages
         cd packages
         svn co https://github.com/danxiaonuo/AutoSync/trunk/server/net6 xiaonuo/net6
-        find xiaonuo/. -type d -iname '.svn' | xargs rm -rf
+        find /home/runner/work/AutoSync/AutoSync/packages/xiaonuo/. -type d -iname '.svn' | xargs rm -rf
         svn co https://github.com/project-openwrt/openwrt/branches/master/package/ctcgfw xiaonuo
-        find xiaonuo/. -type d -iname '.svn' | xargs rm -rf
+        find /home/runner/work/AutoSync/AutoSync/packages/xiaonuo/. -type d -iname '.svn' | xargs rm -rf
         svn co https://github.com/project-openwrt/openwrt/branches/master/package/lean xiaonuo
-        find xiaonuo/. -type d -iname '.svn' | xargs rm -rf
+        find /home/runner/work/AutoSync/AutoSync/packages/xiaonuo/. -type d -iname '.svn' | xargs rm -rf
         svn co https://github.com/project-openwrt/openwrt/branches/master/package/lienol xiaonuo
-        find xiaonuo/. -type d -iname '.svn' | xargs rm -rf
+        find /home/runner/work/AutoSync/AutoSync/packages/xiaonuo/. -type d -iname '.svn' | xargs rm -rf
         svn co https://github.com/project-openwrt/openwrt/branches/master/package/ntlf9t xiaonuo
-        find xiaonuo/. -type d -iname '.svn' | xargs rm -rf
+        find /home/runner/work/AutoSync/AutoSync/packages/xiaonuo/. -type d -iname '.svn' | xargs rm -rf
         svn co https://github.com/project-openwrt/openwrt/branches/master/package/zxlhhyccc xiaonuo
-        find xiaonuo/. -type d -iname '.svn' | xargs rm -rf
+        find /home/runner/work/AutoSync/AutoSync/packages/xiaonuo/. -type d -iname '.svn' | xargs rm -rf
         rm -rf .svn && rm -rf *.md && rm -rf LICENSE rm -rf README MAINTAINERS LICENSE
         find /home/runner/work/AutoSync/AutoSync/packages/. -type d -iname '.svn' | xargs rm -rf
         find /home/runner/work/AutoSync/AutoSync/packages/. -type d -iname '.git' | xargs rm -rf
