--- a/.github/workflows/autosync_packages.yml
+++ b/.github/workflows/autosync_packages.yml
@@ -36,6 +36,8 @@ env:
    GITHUB_RROJECT: github.com/danxiaonuo/packages.git
    # 分支
    BRANCH: master
+   # GITHUB项目路径
+   GITHUB_PATH: /home/runner/work/AutoSync/AutoSync/packages
    
    # 任务集
 jobs:
@@ -66,21 +68,13 @@ jobs:
       run: |
         git clone $REPO_URL -b $REPO_BRANCH packages
         cd packages
+        svn co https://github.com/danxiaonuo/uola/trunk/package/xiaonuo xiaonuo
+        find ${{ env.GITHUB_PATH }}/xiaonuo/. -type d -iname '.git' | xargs rm -rf
         svn co https://github.com/danxiaonuo/AutoSync/trunk/server/net6 xiaonuo/net6
-        find /home/runner/work/AutoSync/AutoSync/packages/xiaonuo/. -type d -iname '.svn' | xargs rm -rf
-        svn co https://github.com/project-openwrt/openwrt/branches/master/package/ctcgfw xiaonuo
-        find /home/runner/work/AutoSync/AutoSync/packages/xiaonuo/. -type d -iname '.svn' | xargs rm -rf
-        svn co https://github.com/project-openwrt/openwrt/branches/master/package/lean xiaonuo
-        find /home/runner/work/AutoSync/AutoSync/packages/xiaonuo/. -type d -iname '.svn' | xargs rm -rf
-        svn co https://github.com/project-openwrt/openwrt/branches/master/package/lienol xiaonuo
-        find /home/runner/work/AutoSync/AutoSync/packages/xiaonuo/. -type d -iname '.svn' | xargs rm -rf
-        svn co https://github.com/project-openwrt/openwrt/branches/master/package/ntlf9t xiaonuo
-        find /home/runner/work/AutoSync/AutoSync/packages/xiaonuo/. -type d -iname '.svn' | xargs rm -rf
-        svn co https://github.com/project-openwrt/openwrt/branches/master/package/zxlhhyccc xiaonuo
-        find /home/runner/work/AutoSync/AutoSync/packages/xiaonuo/. -type d -iname '.svn' | xargs rm -rf
+        find ${{ env.GITHUB_PATH }}/xiaonuo/. -type d -iname '.svn' | xargs rm -rf
         rm -rf .svn && rm -rf *.md && rm -rf LICENSE rm -rf README MAINTAINERS LICENSE
-        find /home/runner/work/AutoSync/AutoSync/packages/. -type d -iname '.svn' | xargs rm -rf
-        find /home/runner/work/AutoSync/AutoSync/packages/. -type d -iname '.git' | xargs rm -rf
+        find ${{ env.GITHUB_PATH }}/. -type d -iname '.svn' | xargs rm -rf
+        find ${{ env.GITHUB_PATH }}/. -type d -iname '.git' | xargs rm -rf
       
     # 上传到分支
     - name: 上传到分支
