--- a/.github/workflows/autosync_routing.yml
+++ b/.github/workflows/autosync_routing.yml
@@ -36,6 +36,8 @@ env:
    GITHUB_RROJECT: github.com/danxiaonuo/routing.git
    # 分支
    BRANCH: master
+   # GITHUB项目路径
+   GITHUB_PATH: /home/runner/work/AutoSync/AutoSync/routing
    
    # 任务集
 jobs:
@@ -67,8 +69,7 @@ jobs:
         git clone $REPO_URL -b $REPO_BRANCH routing
         cd routing
         rm -rf .svn && rm -rf *.md && rm -rf LICENSE rm -rf README MAINTAINERS LICENSE
-        find /home/runner/work/AutoSync/AutoSync/routing/. -type d -iname '.svn' | xargs rm -rf
-        find /home/runner/work/AutoSync/AutoSync/routing/. -type d -iname '.git' | xargs rm -rf
+        find ${{ env.GITHUB_PATH }} -type d -regextype posix-extended -regex '.*.(svn|git)' -exec rm -rf {} \; >& /dev/null
       
     # 上传到分支
     - name: 上传到分支
