--- a/.github/workflows/autosync_packages.yml
+++ b/.github/workflows/autosync_packages.yml
@@ -69,11 +69,14 @@ jobs:
         git clone $REPO_URL -b $REPO_BRANCH packages
         cd packages
         svn co https://github.com/danxiaonuo/uola/trunk/package/xiaonuo xiaonuo
-        find ${{ env.GITHUB_PATH }} -type d -regextype posix-extended -regex '.*.(svn|git)' -exec rm -rf {} \; >& /dev/null
+        find ${{ env.GITHUB_PATH }}/. -type d -iname '.svn' | xargs rm -rf
         svn co https://github.com/danxiaonuo/AutoSync/trunk/server/net6 xiaonuo/net6
-        find ${{ env.GITHUB_PATH }} -type d -regextype posix-extended -regex '.*.(svn|git)' -exec rm -rf {} \; >& /dev/null
+        find ${{ env.GITHUB_PATH }}/. -type d -iname '.svn' | xargs rm -rf
+        svn co https://github.com/danxiaonuo/AutoSync/trunk/server/smartdns_config xiaonuo/smartdns_config
+        find ${{ env.GITHUB_PATH }}/. -type d -iname '.svn' | xargs rm -rf
         rm -rf .svn && rm -rf *.md && rm -rf LICENSE rm -rf README MAINTAINERS LICENSE
-        find ${{ env.GITHUB_PATH }} -type d -regextype posix-extended -regex '.*.(svn|git)' -exec rm -rf {} \; >& /dev/null
+        find ${{ env.GITHUB_PATH }}/. -type d -iname '.svn' | xargs rm -rf
+        find ${{ env.GITHUB_PATH }}/. -type d -iname '.git' | xargs rm -rf
       
     # 上传到分支
     - name: 上传到分支
