--- a/.github/workflows/autosync_uola.yml
+++ b/.github/workflows/autosync_uola.yml
@@ -73,6 +73,7 @@ jobs:
         rm -rf .svn && rm -rf *.md && rm -rf LICENSE rm -rf README MAINTAINERS LICENSE
         find ${{ env.GITHUB_PATH }}/. -type d -iname '.svn' | xargs rm -rf
         find ${{ env.GITHUB_PATH }}/. -type d -iname '.git' | xargs rm -rf
+        cp server/uola/README.md .
       
     # 加载自定义脚本  
     - name: 加载自定义脚本
