--- a/.github/workflows/autosync_packages.yml
+++ b/.github/workflows/autosync_packages.yml
@@ -36,6 +36,8 @@ env:
    GITHUB_RROJECT: github.com/danxiaonuo/packages.git
    # 分支
    BRANCH: master
+   # 自定义执行脚本名称
+   DIY_SH: scripts/uola-packages-openwrt.sh
    # GITHUB项目路径
    GITHUB_PATH: /home/runner/work/AutoSync/AutoSync/packages
    
@@ -68,15 +70,15 @@ jobs:
       run: |
         git clone $REPO_URL -b $REPO_BRANCH packages
         cd packages
-        svn co https://github.com/danxiaonuo/uola/trunk/package/xiaonuo xiaonuo
-        find ${{ env.GITHUB_PATH }}/. -type d -iname '.svn' | xargs rm -rf
-        svn co https://github.com/danxiaonuo/AutoSync/trunk/server/net6 xiaonuo/net6
-        find ${{ env.GITHUB_PATH }}/. -type d -iname '.svn' | xargs rm -rf
-        svn co https://github.com/danxiaonuo/AutoSync/trunk/server/smartdns_config xiaonuo/smartdns_config
-        find ${{ env.GITHUB_PATH }}/. -type d -iname '.svn' | xargs rm -rf
-        rm -rf .svn && rm -rf *.md && rm -rf LICENSE rm -rf README MAINTAINERS LICENSE
         find ${{ env.GITHUB_PATH }}/. -type d -iname '.svn' | xargs rm -rf
         find ${{ env.GITHUB_PATH }}/. -type d -iname '.git' | xargs rm -rf
+        
+    # 加载自定义脚本  
+    - name: 加载自定义脚本
+      run: |
+        chmod +x $DIY_SH
+        cd packages
+        ../$DIY_SH
       
     # 上传到分支
     - name: 上传到分支
