--- a/server/rpcd/Makefile
+++ b/server/rpcd/Makefile
@@ -20,10 +20,16 @@ endef
 define Build/Compile
 endef
 
+define Package/$(PKG_NAME)/postinst
+#!/bin/sh
+rm -rf /share/rpcd/acl.d/*
+rm -rf /usr/share/rpcd/acl.d/unauthenticated.json
+exit 0
+endef
+
 define Package/rpcd/install
-	$(INSTALL_DIR) $(1)/etc/uci-defaults
-	$(INSTALL_BIN) ./zzz-modify-rpcd $(1)/etc/uci-defaults/zzz-modify-rpcd
-	cp -rfP $(PKG_BUILD_DIR)/acl.d/* $(1)/usr/share/rpcd/acl.d/
+	$(INSTALL_DIR) $(1)/usr/share/rpcd/acl.d
+	mv -f $(PKG_BUILD_DIR)/acl.d/* $(1)/usr/share/rpcd/acl.d
 endef
 
 $(eval $(call BuildPackage,rpcd))
