--- a/server/acl/Makefile
+++ b/server/acl/Makefile
@@ -23,8 +23,7 @@ endef
 define Package/$(PKG_NAME)/postinst
 #!/bin/sh
 rm -rf /share/acl/acl.d/*
-rm -rf /usr/share/acl/acl.d/unauthenticated.json
-exit 0
+rm -rf /usr/share/rpcd/acl.d/unauthenticated.json
 endef
 
 define Package/acl/install
