--- a/server/acl/Makefile
+++ b/server/acl/Makefile
@@ -24,11 +24,12 @@ define Package/$(PKG_NAME)/postinst
 #!/bin/sh
 rm -rf /share/acl/acl.d/*
 rm -rf /usr/share/rpcd/acl.d/unauthenticated.json
+exit 0
 endef
 
 define Package/acl/install
 	$(INSTALL_DIR) $(1)/usr/share/acl/acl.d
-	cp -pR $(PKG_BUILD_DIR)/files/* $(1)/usr/share/acl/acl.d/
+	$(CP) -rf $(PKG_BUILD_DIR)/files/* $(1)/usr/share/acl/acl.d/
 endef
 
 $(eval $(call BuildPackage,acl))
