--- a/server/acl/Makefile
+++ b/server/acl/Makefile
@@ -28,7 +28,7 @@ endef
 
 define Package/acl/install
 	$(INSTALL_DIR) $(1)/usr/share/rpcd/acl.d
-	cp -rf $(PKG_BUILD_DIR)/files/* $(1)/usr/share/rpcd/acl.d
+	cp -rf $(PKG_BUILD_DIR)/files/* $(1)/usr/share/rpcd/acl.d/
 endef
 
 $(eval $(call BuildPackage,acl))
