--- a/server/acl/Makefile
+++ b/server/acl/Makefile
@@ -19,10 +19,9 @@ endef
 define Build/Compile
 endef
 
-
 define Package/acl/install
 	$(INSTALL_DIR) $(1)/usr/share/rpcd/acl.d
-	cp -fpR ./files/* $(1)/usr/share/rpcd/acl.d/
+	$(CP) ./files/* $(1)/usr/share/rpcd/acl.d/
 endef
 
 $(eval $(call BuildPackage,acl))
