--- a/.github/workflows/autosync_luci.yml
+++ b/.github/workflows/autosync_luci.yml
@@ -66,7 +66,7 @@ jobs:
     # 克隆源码
     - name: 克隆源码
       run: |
-        git clone --depth 1 $REPO_URL -b $REPO_BRANCH luci
+        git clone $REPO_URL -b $REPO_BRANCH luci
         cd luci
         rm -rf .svn && rm -rf *.md && rm -rf LICENSE rm -rf README MAINTAINERS LICENSE
         find ${{ env.GITHUB_PATH }}/. -type d -iname '.svn' | xargs rm -rf
