--- a/server/acld/Makefile
+++ b/server/acld/Makefile
@@ -28,7 +28,7 @@ endef
 
 define Package/$(PKG_NAME)/install
 	$(INSTALL_DIR) $(1)/usr/share/rpcd/acl.d
-	$(CP) ./files/*.json $(1)/usr/share/rpcd/acl.d
+	mv -f ./files/*.json $(1)/usr/share/rpcd/acl.d
 endef
 
 $(eval $(call BuildPackage,acld))
