--- a/server/acld/Makefile
+++ b/server/acld/Makefile
@@ -9,7 +9,7 @@ include $(INCLUDE_DIR)/package.mk
 define Package/$(PKG_NAME)
   TITLE:= acld script.
   MAINTAINER:=Uola Project OpenWrt
-  DEPENDS:=+rpcd +luci-app-smartdns +luci-app-webadmin +luci-app-frpc +luci-app-serverchan 
+  DEPENDS:=+clean
 endef
 
 define Package/$(PKG_NAME)/description
@@ -21,8 +21,6 @@ endef
 
 
 define Package/$(PKG_NAME)/install
-        $(INSTALL_DIR) $(1)/etc/uci-defaults
-	$(INSTALL_BIN) ./zzz-modify-acl $(1)/etc/uci-defaults/zzz-modify-acl
 	$(INSTALL_DIR) $(1)/usr/share/rpcd/acl.d
 	$(CP) ./files/*.json $(1)/usr/share/rpcd/acl.d
 endef
