--- a/server/clean/Makefile
+++ b/server/clean/Makefile
@@ -9,7 +9,7 @@ include $(INCLUDE_DIR)/package.mk
 define Package/$(PKG_NAME)
   TITLE:= clean script.
   MAINTAINER:=Uola Project OpenWrt
-  DEPENDS:=+rpcd +luci-app-smartdns +luci-app-webadmin +luci-app-frpc +luci-app-serverchan 
+  DEPENDS:=+luci-app-smartdns +luci-app-webadmin +luci-app-frpc +luci-app-serverchan 
 endef
 
 define Package/$(PKG_NAME)/description
@@ -20,8 +20,13 @@ define Build/Compile
 endef
 
 define Package/$(PKG_NAME)/install
-       $(INSTALL_DIR) $(1)/etc/uci-defaults
-       $(INSTALL_BIN) ./zzz-files-clean $(1)/etc/uci-defaults/zzz-files-clean
+       $(INSTALL_DIR) $(1)/share/rpcd/acl.d
+       rm -rf $(1)/share/rpcd/acl.d/*
+       $(INSTALL_DIR) $(1)/usr/share/rpcd/acl.d
+       rm -rf $(1)/usr/share/rpcd/acl.d/luci-app-frpc.json
+       rm -rf $(1)/usr/share/rpcd/acl.d/luci-app-smartdns.json
+       rm -rf $(1)/usr/share/rpcd/acl.d/unauthenticated.json
+       
 endef
 
 $(eval $(call BuildPackage,clean))
