Update and rename unauthenticated.json to unknown.json

--- a/server/acld/files/unknown.json
+++ b/server/acld/files/unknown.json
@@ -1,6 +1,6 @@
 {
-	"unauthenticated": {
-		"description": "Access controls for unauthenticated requests",
+	"*": {
+		"description": "Access controls for unknown requests",
 		"read": {
 			"file": {
 				"*": [ "*" ]
