--- a/.github/workflows/autosync_resources.yml
+++ b/.github/workflows/autosync_resources.yml
@@ -68,6 +68,7 @@ jobs:
       run: |
         git clone $REPO_URL -b $REPO_BRANCH resources
         cd resources
+        sed -i '/#!MANAGED-CONFIG/d' *
         rm -rf .svn && rm -rf *.md && rm -rf LICENSE rm -rf README MAINTAINERS LICENSE
         find ${{ env.GITHUB_PATH }}/. -type d -iname '.svn' | xargs rm -rf
         find ${{ env.GITHUB_PATH }}/. -type d -iname '.git' | xargs rm -rf
