更新 smartdns.conf

--- a/server/smartdns_config/files/smartdns.conf
+++ b/server/smartdns_config/files/smartdns.conf
@@ -30,6 +30,15 @@ config smartdns
 
 config server
 	option enabled '1'
+	option name 'TencentDNS'
+	option ip '13800000000.rubyfish.cn'
+	option port '853'
+	option type 'tls'
+	option server_group 'cn'
+	option blacklist_ip '0'
+
+config server
+	option enabled '1'
 	option type 'udp'
 	option name '114DNS'
 	option ip '114.114.114.114'
@@ -152,22 +161,4 @@ config server
 	option ip '2001:4860:4860::8888'
 	option port '53'
 	option server_group 'global'
-	option blacklist_ip '0'
-
-config server
-	option enabled '1'
-	option type 'udp'
-	option name '10086'
-	option ip '211.138.180.2'
-	option port '53'
-	option server_group 'cn'
-	option blacklist_ip '0'
-
-config server
-	option enabled '1'
-	option type 'udp'
-	option name '10086'
-	option ip '211.138.180.3'
-	option port '53'
-	option server_group 'cn'
 	option blacklist_ip '0'
