--- a/.github/workflows/autosync_resources.yml
+++ b/.github/workflows/autosync_resources.yml
@@ -69,7 +69,11 @@ jobs:
         git clone $REPO_URL -b $REPO_BRANCH resources
         cd resources
         sed -i '/#!MANAGED-CONFIG/d' *
-        rm -rf .svn && rm -rf *.md && rm -rf LICENSE rm -rf README MAINTAINERS LICENSE
+        curl -fsSL https://raw.githubusercontent
+        .com/danxiaonuo/AutoSync/master/Clash/v2ray.py > v2ray.py
+        python3.8 v2ray.py
+        rm -rf .svn && rm -rf *.md && rm -rf *.py && rm -rf LICENSE rm -rf 
+        README MAINTAINERS LICENSE
         find ${{ env.GITHUB_PATH }}/. -type d -iname '.svn' | xargs rm -rf
         find ${{ env.GITHUB_PATH }}/. -type d -iname '.git' | xargs rm -rf
         
