--- a/.github/workflows/autosync_resources.yml
+++ b/.github/workflows/autosync_resources.yml
@@ -71,7 +71,7 @@ jobs:
         sed -i '/#!MANAGED-CONFIG/d' *
         curl -fsSL https://raw.githubusercontent.com/danxiaonuo/AutoSync/master/Clash/v2ray.py > v2ray.py
         curl -fsSL https://raw.githubusercontent.com/danxiaonuo/AutoSync/master/Clash/config.yaml > config.yaml
-        chmod 775 v2ray.py && python3.8 v2ray.py && rm -rf config.yaml
+        chmod 775 v2ray.py && python3.8 v2ray.py && mv config.yaml Clashx.yaml
         rm -rf .svn && rm -rf *.md && rm -rf *.py && rm -rf LICENSE rm -rf README MAINTAINERS LICENSE
         find ${{ env.GITHUB_PATH }}/. -type d -iname '.svn' | xargs rm -rf
         find ${{ env.GITHUB_PATH }}/. -type d -iname '.git' | xargs rm -rf
