更新 smartdns.conf

--- a/server/smartdns_config/files/smartdns.conf
+++ b/server/smartdns_config/files/smartdns.conf
@@ -1,164 +1,59 @@
-config smartdns
-	option server_name 'cn'
-	option port '6053'
-	option tcp_server '1'
-	option ipv6_server '1'
-	option dualstack_ip_selection '0'
-	option prefetch_domain '1'
-	option serve_expired '0'
-	option redirect 'none'
-	option cache_size '5120'
-	option rr_ttl_min '300'
-	option rr_ttl_max '3600'
-	option seconddns_port '6553'
-	option seconddns_tcp_server '1'
-	option seconddns_no_rule_addr '0'
-	option seconddns_no_rule_nameserver '0'
-	option seconddns_no_rule_ipset '0'
-	option seconddns_no_rule_soa '0'
-	option force_aaaa_soa '0'
-	option coredump '0'
-	option seconddns_server_group 'global'
-	option seconddns_no_speed_check '1'
-	option seconddns_no_dualstack_selection '1'
-	option seconddns_no_cache '1'
-	option enabled '1'
-	option seconddns_enabled '1'
-	list old_redirect 'none'
-	list old_port '6053'
-	list old_enabled '1'
-
-config server
-	option enabled '1'
-	option name 'TencentDNS'
-	option ip '13800000000.rubyfish.cn'
-	option port '853'
-	option type 'tls'
-	option server_group 'cn'
-	option blacklist_ip '0'
-
-config server
-	option enabled '1'
-	option type 'udp'
-	option name '114DNS'
-	option ip '114.114.114.114'
-	option port '53'
-	option server_group 'cn'
-	option blacklist_ip '0'
-
-config server
-	option enabled '1'
-	option type 'udp'
-	option name 'DNSPod'
-	option ip '119.29.29.29'
-	option port '53'
-	option server_group 'cn'
-	option blacklist_ip '0'
-
-config server
-	option enabled '1'
-	option type 'udp'
-	option name 'AliDNS'
-	option ip '223.5.5.5'
-	option port '53'
-	option server_group 'cn'
-	option blacklist_ip '0'
-
-config server
-	option enabled '1'
-	option type 'udp'
-	option name 'BaiduDNS'
-	option ip '180.76.76.76'
-	option port '53'
-	option server_group 'cn'
-	option blacklist_ip '0'
-
-config server
-	option enabled '1'
-	option type 'udp'
-	option name 'oneDNS'
-	option ip '117.50.11.11'
-	option port '53'
-	option server_group 'cn'
-	option blacklist_ip '0'
-
-config server
-	option enabled '1'
-	option type 'udp'
-	option name 'CNNIC sDNS'
-	option ip '1.2.4.8'
-	option port '53'
-	option server_group 'cn'
-	option blacklist_ip '0'
-
-config server
-	option enabled '1'
-	option name 'GoogleDNS'
-	option ip 'dns.google'
-	option port '853'
-	option type 'tls'
-	option server_group 'global'
-	option blacklist_ip '0'
-
-config server
-	option enabled '1'
-	option name 'CloudflareDNS'
-	option ip '1dot1dot1dot1.cloudflare-dns.com'
-	option port '853'
-	option type 'tls'
-	option server_group 'global'
-	option blacklist_ip '0'
-
-config server
-	option enabled '1'
-	option name 'GoogleDNS'
-	option ip 'dns.google/dns-query'
-	option type 'https'
-	option server_group 'global'
-	option blacklist_ip '0'
-	option port '443'
-
-config server
-	option enabled '1'
-	option name 'CloudflareDNS'
-	option ip 'cloudflare-dns.com/dns-query'
-	option type 'https'
-	option server_group 'global'
-	option blacklist_ip '0'
-	option port '443'
-
-config server
-	option enabled '1'
-	option type 'udp'
-	option name 'AliDNS IPV6'
-	option ip '2400:3200::1'
-	option port '53'
-	option server_group 'cn'
-	option blacklist_ip '0'
-
-config server
-	option enabled '1'
-	option type 'udp'
-	option name 'BaiduDNS IPV6'
-	option ip '2400:da00::6666'
-	option port '53'
-	option server_group 'cn'
-	option blacklist_ip '0'
-
-config server
-	option enabled '1'
-	option type 'udp'
-	option name 'CFIECDNS IPV6'
-	option ip '240C::6666'
-	option port '53'
-	option server_group 'cn'
-	option blacklist_ip '0'
-
-config server
-	option enabled '1'
-	option type 'udp'
-	option name 'GoogleDNS IPV6'
-	option ip '2001:4860:4860::8888'
-	option port '53'
-	option server_group 'global'
-	option blacklist_ip '0'
+# DNS服务器名称
+server-name cn
+# DNS监听端口号
+# -no-speed-check(停用测速) -group(请求时使用的DNS服务器组) -no-dualstack-selection(停用双栈测速) -no-cache(停止缓存)
+bind [::]:53
+# TCP DNS监听端口号
+bind-tcp [::]:53
+# 域名预先获取功能
+prefetch-domain yes
+# 双栈IP优选
+#dualstack-ip-selection yes
+# 双栈IP优选阈值
+#dualstack-ip-selection-threshold 30ms
+# 强制AAAA地址返回SOA
+force-AAAA-SOA yes
+# 域名结果缓存个数
+cache-size 0
+#cache-size 5120
+# 允许的最小TTL值
+rr-ttl-min 300
+# 允许的最大TTL值
+rr-ttl-max 3600
+# 日志大小
+log-size 64K
+# 日志归档个数
+log-num 1
+# 设置日志级别
+log-level error
+# server(上游UDP DNS) server-tls(上游TLS DNS) server-https(上游HTTPS DNS)
+# 配置上游，用-group指定组名,用-exclude-default-group将服务器从默认组中排除。
+server 211.138.180.2:53 -group cn
+server 211.138.180.3:53 -group cn
+server-tls ea-dns.rubyfish.cn:853 -group cn
+server-tls uw-dns.rubyfish.cn:853 -group cn
+server 114.114.114.114:53 -group cn
+server 119.29.29.29:53 -group cn
+server 223.5.5.5:53 -group cn
+server 180.76.76.76:53 -group cn
+server 117.50.11.11:53 -group cn
+server 1.2.4.8:53 -group cn
+server [2400:3200::1]:53 -group cn
+server [2400:da00::6666]:53 -group cn
+server [240C::6666]:53 -group cn
+server 211.138.180.2:53 -group global -exclude-default-group
+server 211.138.180.3:53 -group global -exclude-default-group
+server-tls ea-dns.rubyfish.cn:853 -group global -exclude-default-group
+server-tls uw-dns.rubyfish.cn:853 -group global -exclude-default-group
+server-tls 1dot1dot1dot1.cloudflare-dns.com:853 -group global -exclude-default-group
+server-tls dns.google:853 -group global -exclude-default-group
+server-https dns.google/dns-query -group global -exclude-default-group
+server-https cloudflare-dns.com/dns-query -group global -exclude-default-group
+server [2001:4860:4860::8888]:53 -group global -exclude-default-group
+# 配置解析的域名
+# 谷歌规则匹配
+nameserver /.google.com/global
+# youtube规则匹配
+nameserver /.youtube.com/global
+# 奈飞规则匹配
+nameserver /.netflix.com/global
